2012-05-16  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/unix/sysv/linux/x86_64/bits/a.out.h: Don't include
	<bits/wordsize.h>.  Check __x86_64__ instead of __WORDSIZE.

2012-05-16  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/unix/sysv/linux/x86_64/bits/siginfo.h: New file.

2012-05-16  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/x86_64/x32/divdi3.c: New dummy file.
	* sysdeps/x86_64/x32/symbol-hacks.h: Likewise.

2012-05-16  H.J. Lu  <hongjiu.lu@intel.com>

	* sysvipc/sys/msg.h (msgbuf): Replace long int with
	__syscall_slong_t.

2012-05-16  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/unix/sysv/linux/x86_64/sys/reg.h: Don't
	include <bits/wordsize.h>.  Check __x86_64__ instead of
	__WORDSIZE.

2012-05-16  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/unix/sysv/linux/x86_64/sys/procfs.h (elf_greg_t): Use
	"unsigned long long int" if __x86_64__ is defined.
	(elf_fpregset_t): Check __x86_64__ instead of __WORDSIZE.

2012-05-16  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/unix/sysv/linux/x86_64/sys/debugreg.h: Don't include
	<bits/wordsize.h>.  Check __x86_64__ instead of __WORDSIZE.
	(DR_CONTROL_RESERVED): Use ULL instead of UL suffix.

2012-05-16  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/unix/sysv/linux/x86_64/sigcontextinfo.h: Include
	<stdint.h>.
	(GET_PC): Cast to uintptr_t first.
	(GET_FRAME): Likewise.
	(GET_STACK): Likewise.

2012-05-16  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/unix/sysv/linux/x86_64/x32/alphasort.c: New file.
	* sysdeps/unix/sysv/linux/x86_64/x32/alphasort64.c: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/x32/fseeko.c: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/x32/fseeko64.c: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/x32/ftello.c: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/x32/ftello64.c: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/x32/ftw.c: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/x32/ftw64.c: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/x32/glob.c: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/x32/iofgetpos.c: Likewise.